<resources>
    <string name="app_name">Beets</string>
    <string name="title_home">Home</string>
    <string name="title_discovery">Discover</string>
    <string name="title_add">Add</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_me">Me</string>

    <string name="test_story_url_1">https://bitdash-a.akamaihd.net/content/MI201109210084_1/m3u8s/f08e80da-bf1d-4e3d-8899-f0f6155f6efa.m3u8</string>
    <string name="test_story_url_2">https://mnmedias.api.telequebec.tv/m3u8/29880.m3u8</string>
    <string name="test_story_url_3">https://res.cloudinary.com/mydatacloud/video/upload/v1592677620/stories/Sample_WebM_Ogg_and_MP4_Video_Files_for_HTML5_-_TechSlides_xxygbh.m3u8</string>
    <string name="test_story_url_4">https://res.cloudinary.com/mydatacloud/video/upload/v1592677622/stories/Sample_Videos___Dummy_Videos_For_Demo_Use_x4vqdv.m3u8</string>

    <string name="test_story_description">This is a test video #Covid19 #corona #demo #content</string>
    <string name="test_user_pic_url"><![CDATA[https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&dl=albert-dera-ILip77SbmOE-unsplash.jpg&w=640]]></string>
    <string name="share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_videos">My Videos</string>
    <string name="my_private_videos">My Private Videos</string>
    <string name="my_liked_videos">My Liked Videos</string>
    <string name="swipe_up">Swipe up</string>
    <string name="personalize">Videos are personalized for you based on what you watch, like and share.</string>

    <string name="close">Close</string>
    <string name="flip">Flip</string>
    <string name="speed">Speed</string>
    <string name="filters">Filters</string>
    <string name="beautify">Beautify</string>
    <string name="timer">Timer</string>
    <string name="flash">Flash</string>
    <string name="upload">Upload</string>
    <string name="start_recording">Start Recording</string>
    <string name="add_sound">Add sound</string>
    <string name="end_recording">End Recording</string>
    <string name="pause_recording">Pause Recording</string>
    <string name="finish_recording">Finish Recording</string>
    <string name="little_space_available">Little space available</string>
    <string name="little_space_description">Your device has little space left. Delete some apps and files to begin recording.</string>
    <string name="request_permission_title">Unable to record. Please try the following:</string>
    <string name="request_permission_one">1. Video recording permission is not enabled: allow camera and microphone access under app permission settings.</string>
    <string name="request_permission_two">2. Another app may be using your camera apps or restart your device and try again.</string>
    <string name="request_permission_three">3. If your device is using Android 6.0 or above, please enable permissions for external storage.</string>
    <string name="loading">Loading</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="all_permissions_granted">All Permissions Granted.</string>
    <string name="permissions_denied">Permissions denied. Kindly grant permissions to proceed</string>
    <string name="play_video">Play Video</string>
    <string name="next">Next</string>
    <string name="crate_video">Crate Video</string>
    <string name="back_button">Back Button</string>
    <string name="video_thumbnail">Video Thumbnail</string>
    <string name="describe_your_video">Describe your video</string>
    <string name="hashtags">#Hashtags</string>
    <string name="friends">Friends</string>
    <string name="post">Post</string>
    <string name="drafts">Drafts</string>
    <string name="set_your_description">Set Your Description</string>
    <string name="content_activity"><![CDATA[Content & Activity]]></string>
    <string name="CONTENT"><![CDATA[CONTENT & ACTIVITY]]></string>
    <string name="cache_cellular_data"><![CDATA[CACHE & CELLULAR DATA]]></string>


</resources>